# bgpy_pkg

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  \  benchmark.py  codec.py  pga.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
bgp_simulator_pkg/: __init__.py  __main__.py  enums.py
bgp_simulator_pkg/caida_collector/: __init__.py  combined.csv
bgp_simulator_pkg/caida_collector/caida_collector/: __init__.py  caida_collector.py  data_extraction_funcs.py  file_reading_funcs.py  html_funcs.py
bgp_simulator_pkg/caida_collector/graph/: base_as.py  bgp_dag.py  customer_cone_funcs.py  graph_building_funcs.py  propagation_rank_funcs.py
bgp_simulator_pkg/caida_collector/links/: customer_provider_link.py  link.py  peer_link.py
bgp_simulator_pkg/simulation_engine/: __init__.py  announcement.py  simulation_engine.py
bgp_simulator_pkg/simulation_engine/ann_containers/: __init__.py  ann_container.py  local_rib.py  recv_queue.py  ribs_in.py  ribs_out.py  send_queue.py
bgp_simulator_pkg/simulation_engine/as_classes/: __init__.py
bgp_simulator_pkg/simulation_framework/: <F7>  __init__.py  graph_analyzer.py  graph_factory.py  metric_generator.py  metric_tracker.py  simulation.py  utils.py
bgp_simulator_pkg/simulation_framework/lines/: __init__.py  data_attacker_success_all.py  line.py
bgp_simulator_pkg/simulation_framework/metric_tracker/: __init__.py  data_key.py  metric.py  metric_factory.py  metric_key.py  metric_percent_key.py  metric_tracker.py
bgp_simulator_pkg/simulation_framework/scenarios/: __init__.py  scenario.py  scenario_config.py  scenario_trial.py  valid_prefix.py
bgp_simulator_pkg/simulation_framework/subgraphs/: __init__.py  line.py  subgraph.py
bgp_simulator_pkg/simulation_framework_v2/: __init__.py  simulation.py  utils.py
bgp_simulator_pkg/tests/: __init__.py  conftest.py
bgpc/: bgpc.cpp
bgpc/include/: announcement.hpp  enums.hpp  relationships.hpp  utils.hpp
bgpc/src/: bgpc.cpp  cpp_simulation_engine.cpp  main.cpp  utils.cpp
bgpc/src/as_graph/: as.cpp  (+1 more)
bgpy/: __init__.py  __main__.py  enums.py
bgpy/as_graphs/: __init__.py
bgpy/caida_collector/: __init__.py
bgpy/enums/: __init_.py  __init__.py  cpp_enums.py  py_enums.py
bgpy/shared/: __init__.py  constants.py  enums.py  exceptions.py
bgpy/simulation_engine/: __init__.py  announcement.py  simulation_engine.py
bgpy/simulation_engines/: __init__.py
bgpy/simulation_framework/: __init__.py  dependent_simulation.py  graph_analyzer.py  graph_factory.py  simulation.py  utils.py
bgpy/simulation_frameworks/: __init__.py
bgpy/subgraph_simulation_framework/: README.md  __init__.py  subgraph_simulation.py
bgpy/tests/: __init__.py  conftest.py  ruff.toml
bgpy/utils/: __init__.py  diagram.py  engine_run_config.py  engine_runner.py  misc.py  utils.py
chats/: headers.txt
lib_bgp_simulator/: __init__.py  __main__.py  announcement.py  enums.py  relationships.py  roa_validity.py  simulation.py  simulator.py
lib_bgp_simulator/announcements/: __init__.py  ann_w_defaults.py  announcement.py  gen_prefix_ann.py  gen_subprefix_ann.py  gen_superprefix_ann.py  generate_ann.py
lib_bgp_simulator/engine/: __init__.py  ann_queues.py  announcement.py  bgp_as.py  bgp_policy.py  bgp_ribs_as.py  bgp_ribs_policy.py  gao_rexford.py  incoming_anns.py  local_rib.py  relationships.py  ribs.py  roa_validity.py  rov_as.py  rov_policy.py  simulation_engine.py  simulator_engine.py
lib_bgp_simulator/engine_input/: __init__.py  engine_input.py  non_routed_prefix_hijack.py  non_routed_superprefix_hijack.py  non_routed_superprefix_prefix_hijack.py  prefix_hijack.py  scenario.py  single_atk_vic_adopt_cls_scenario.py  subprefix_hijack.py  superprefix_prefix_hijack.py  valid_prefix.py
lib_bgp_simulator/scenarios/: __init__.py  scenario.py  valid_prefix.py
lib_bgp_simulator/simulation_engine/: __init__.py  announcement.py  simulation_engine.py
lib_bgp_simulator/simulation_framework/: __init__.py  simulation.py
lib_bgp_simulator/simulator/: __init__.py  attack.py  data_point.py  graph.py  graph_writer.py  mp.py  mp_method.py  outcomes.py  scenario.py  simulator.py  test.py
lib_bgp_simulator/subgraphs/: line.py  subgraph.py
lib_bgp_simulator/system_tests/: broken_test_proof_of_concept.py  hijack_local_rib.py  run_example.py  test_bgp_policy.py  test_bgp_ribs_policy.py  test_hidden_hijack_bgp.py  test_proof_of_concept.py
lib_bgp_simulator/tests/: __init__.py  conftest.py  easy_ann.py  skip_test_bgp_ribs_policy.py  test_bgp_policy.py  test_bgp_ribs_policy.py  test_sim_inputs.py
rov_ases/: README.md  ROV Deployment Monitoring.html  tma.csv
scripts/: aspa_eval.py  aspawn_debug.py  avg_cone_size.py  benchmark.py  bgpy_question.py  bgpy_question_2.py  debug_metric_keys.py  dependent_ex.py  example.py  make_large_graphs.py  multi_inheritance_ex.py  my_profile.py  no_prof_speed_tests.py  old_ruff.bak  old_test.py  output.txt  profile_stats.txt  rename_subgraphs.py  rovpp_partial_reproduction.py  rovpp_reproduction.py  setup.py  spea_debug.py  speed_test.py  speed_test.txt  speed_tests.py  speed_tests_short_pyinstrument.py  test.py  two_multi_inheritance_ex.py  update_results.sh
scripts/aspa_benchmark/: README.md  aspv_announcement.py  aspv_announcement_small.py  aspv_simple_policy.py  benchmark.py  profiling.py  small_ann.py  test.py
scripts/bgpy_paper/: benchmark.py  numbers.py  results.py
scripts/caida_collector_scripts/: rov_asns.py
scripts/deprecated_scripts/: peer_rov_as.py  simulation.py  subprefix_hijack.py
scripts/old/: make_large_graphs.py  profiler_tree.sh  rename_subgraphs.py  rename_victim_success_subgraphs.py  speed_tests_short_pyinstrument.py
scripts/roa_timing_test.py/: roa_benchmark.py
scripts/rov_ases/: combine.py
scripts/slots_benchmarks/: benchmark.py  slots_benchmark.py  slots_benchmark_full.py
scripts/tutorial/: peer_rov.py  peer_rov_as.py  peer_rov_policy.py  rov.py  rov_as.py  rov_policy.py  simulation.py  subprefix_hijack.py
(+2188 files in other folders)
