[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpy_pkg"
version = "9.0.0"
requires-python = ">=3.10"
description = "Simulates BGP and ROV in an extensible manner"
readme = "README.md"
authors = [
    {name = "Justin Furuness", email = "jfuruness@gmail.com"},
    {name = "Cameron Morris", email = "cameron.morris@uconn.edu"},
    {name = "Reynaldo Morillo", email = "reynaldo.morillo@uconn.edu"},
    {name = "Arvind Kasiliya", email = "arvind.kasiliya@uconn.edu"},
    {name = "Joel Braun", email = "joelbraun@protonmail.com"}
]
maintainers = [
  {name = "Justin Furuness", email = "jfuruness@gmail.com"}
]
license = {file = "LICENSE.txt"}
keywords = [
    "BGPy",
    "bgpy",
    "bgpc",
    "bgpy_pkg",
    "BGP",
    "Caida",
    "CAIDA",
    "Peers",
    "Providers",
    "Relationships",
    "AS-Serial",
    "Customers",
    "Simulation",
    "ROV",
    "Furuness"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers"
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "frozendict==2.4.4",
    "graphviz==0.20.3",
    "matplotlib==3.9.1.post1",
    "pillow==10.4.0",
    "psutil==6.0.0",
    "pytest==8.3.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "requests-cache==1.2.1",
    "roa-checker==3.0.1",
    "tqdm==4.66.5",
    "yamlable==1.1.1",
]

[project.urls]
Homepage = "https://github.com/jfuruness/bgpy_pkg"
Documentation = "https://github.com/jfuruness/bgpy/wiki"

[project.scripts]
bgpy = "bgpy.__main__:main"

[project.optional-dependencies]
test = [
    "isort==5.13.2",
    "black==24.8.0",
    "pre-commit==3.8.0",
    "types-requests==2.32.0.20240712",
    "types-PyYAML==6.0.12.20240808",
    "mypy==1.11.1",
    "flake8==7.1.1",
    "tox==4.17.1",
    "pytest-xdist==3.6.1",
    "ruff==0.5.7",
]

[tool.setuptools]
include-package-data = true

# https://stackoverflow.com/a/76214408/8903959
[tool.setuptools.package-data]
"bgpy" = ["py.typed"]

# https://stackoverflow.com/a/76214408/8903959
# [tool.setuptools.packages.find]
# where = ["bgpy"]

[tool.pytest.ini_options]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]
# addopts = "-m 'not slow'"  # -n 6
markers = [
    "slow",  # All slow tests
    "framework",  # All framework tests
    "unit_tests",  # All unit tests
    "engine",  # All engine tests
    "caida_collector_base_funcs",  # other funcs in caida collector
    "data_extraction_funcs",  # Related to reading data from file
    "html_funcs",  # Funcs related to html
    "read_file_funcs",  # Reading caida files
]
filterwarnings = [
    "ignore::DeprecationWarning:yamlable",
    "ignore::DeprecationWarning:tqdm",
    "ignore::DeprecationWarning:dateutil.tz.tz",
]

[tool.mypy]
mypy_path = "bgpy"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 88

[tool.coverage.run]
branch = true
omit = [
    "*tests*",
    "*__init__*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Excludes lines overrides pragma: no cover, so add it back
    "pragma: no cover",
    # Code below this is not meant to be tested
    "raise NotImplementedError",
    # Code that isn't meant to be run
    "if __name__ == .__main__.:"
]

[tool.isort]
profile = "black"
src_paths = ["bgpy"]
known_my_packages = ["bgpy"]
sections = "FUTURE,STDLIB,THIRDPARTY,MY_PACKAGES,LOCALFOLDER"
