# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = bgp_simulator_pkg
author = Justin Furuness, Cameron Morris
author_email = jfuruness@gmail.com
description = Simulates BGP and ROV
version = 0.1.01
url = https://github.com/jfuruness/bgp_simulator_pkg

keywords =
    BGP
    Caida
    Peers
    Providers
    Relationships
    AS-Serial
    Customers
    Simulation
    ROV
    Furuness

classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires =
    caida_collector_pkg @ git+https://github.com/jfuruness/caida_collector_pkg.git#4f170afe845ae2550fa0ca58e9b6e4209c4a585a
    graphviz==0.20
    pillow==9.2.0
    matplotlib==3.5.2
    pytest==7.1.2
    PyYAML==6.0
    tqdm==4.64.0
    yamlable==1.1.1

description-file = README.md

[options.entry_points]
console_scripts =
    bgp_simulator_pkg = bgp_simulator_pkg.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
# https for github actions and github no longer supports pip + git installs
test =
    types-requests==2.28.0
    types-PyYAML==6.0.11
    pytest-cov==3.0.0
    mypy==0.961
    flake8==4.0.1
    tox==3.25.1
    pytest-xdist==2.5.0

[options.package_data]
bgp_simulator_pkg = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit =
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
