# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = bgpy_pkg
author = Justin Furuness, Cameron Morris, Reynaldo Morillo
author_email = jfuruness@gmail.com
description = Simulates BGP and ROV
version = 1.17.21
url = https://github.com/jfuruness/bgpy

keywords =
    BGP
    Caida
    Peers
    Providers
    Relationships
    AS-Serial
    Customers
    Simulation
    ROV
    Furuness

classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE.txt

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.10
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires =
    beautifulsoup4==4.10.0
    requests==2.31.0
    frozendict==2.3.8
    graphviz==0.20
    pillow==9.2.0
    matplotlib==3.5.2
    pytest==7.1.2
    PyYAML~=6.0
    tqdm==4.64.0
    yamlable==1.1.1

description_file = README.md

[options.entry_points]
console_scripts =
    bgpy = bgpy.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
# https for github actions and github no longer supports pip + git installs
test =
    black==23.7.0
    pre-commit==3.3.3
    types-requests==2.31.0
    types-PyYAML==6.0.11
    mypy==0.982
    flake8==4.0.1
    tox==4.6.3
    pytest-xdist==2.5.0
    ruff==0.0.275

[options.package_data]
bgpy = py.typed

[flake8]
max-line-length = 88

[coverage:run]
branch = True
omit =
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
